--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             strings: ["Programmer", "UI Designer", "Professional Coder", "Quick Learner"],
             typeSpeed : 110,
             backSpeed : 80,
-            looped:true
+            loop:true
         })
     </script>
 </body>
